Update Style Chat. Update z-index element and Fix ScrollBar

--- a/src/app/assets/css/chat.less
+++ b/src/app/assets/css/chat.less
@@ -18,7 +18,7 @@
 
 .chat-header {
   box-sizing: border-box;
-  z-index: 100;
+  z-index: 2;
   position: absolute;
   width: 100%;
   padding: 10px;
