--- a/src/app/assets/css/header.less
+++ b/src/app/assets/css/header.less
@@ -1,1 +1,1 @@
-.mui-drop-down-menu { z-index: 200; }
+.mui-drop-down-menu { z-index: 3; }
